--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,1 @@
-HELP.md
-target/
-.mvn/
-mvnw*
-!**/src/main/**
-!**/src/test/**
-*.jar
-
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-nbactions.xml
-nb-configuration.xml
-
-### VS Code ###
-.vscode/
+﻿*.log
